--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,17 @@ java {
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.batch:spring-batch-experimental:0.3.0'
+    implementation 'org.mongodb:mongodb-driver-sync'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
+    implementation 'io.github.oshai:kotlin-logging:7.0.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testImplementation 'org.springframework.batch:spring-batch-test'
