--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'io.github.oshai:kotlin-logging:7.0.0'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.2'
-    runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testImplementation 'org.springframework.batch:spring-batch-test'
