--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,15 +5,10 @@ spring:
     username: ENC(5HcBakGuQmsvLhEtcwYbPotxqEoN5Z3h)
     password: ENC(SH9imB3zUHRqx7YMeSJfRP4Lw8DhSTszPmg82pQ17S4=)
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jpa:
-      hibernate:
-        ddl-auto: create
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.MySQL8Dialect
-  batch:
-    jdbc:
-      initialize-schema: always
+  jpa:
+    hibernate.ddl-auto: create
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+  batch.jdbc.initialize-schema: always
 
 jasypt:
   encryptor:
