--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ repositories {
     maven { url 'https://repo.spring.io/snapshot' }
 }
 
+dependencyManagement {
+    imports {
+        mavenBom('org.springframework.cloud:spring-cloud-dependencies:2023.0.3')
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -27,6 +33,7 @@ dependencies {
     implementation 'io.github.oshai:kotlin-logging:7.0.0'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.2'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
