--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -25,7 +25,7 @@ feign:
 
 jasypt:
   encryptor:
-    password: ${JASYPT_ENCRYPTOR_PASSWORD:}
+    password: ${jasyptPassword}
     algorithm: PBEWithMD5AndDES
 
 # for test
