--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
+    implementation 'org.apache.poi:poi-ooxml:5.3.0'
     implementation 'io.github.oshai:kotlin-logging:7.0.0'
+    implementation 'com.microsoft.playwright:playwright:1.47.0'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.2'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
-    implementation 'org.apache.poi:poi-ooxml:5.3.0'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
