job.enabled = false

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,9 @@ spring:
     hibernate.ddl-auto: update
   batch:
     jdbc.initialize-schema: embedded
-    job.name: linkGenerationJob
+    job:
+      name: linkGenerationJob
+      enabled: false
 
 feign:
   client:
