--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     implementation 'com.microsoft.playwright:playwright:1.47.0'
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
     implementation 'org.eclipse.jgit:org.eclipse.jgit:7.0.0.202409031743-r'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.7.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3'
+    implementation 'de.brudaswen.kotlinx.serialization:kotlinx-serialization-csv:2.0.0'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.2'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
@@ -57,9 +59,9 @@ dependencies {
     kapt("com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
 
     allOpen {
-        annotation("javax.persistence.Entity")
-        annotation("javax.persistence.MappedSuperclass")
-        annotation("javax.persistence.Embeddable")
+        annotation("jakarta.persistence.Entity")
+        annotation("jakarta.persistence.MappedSuperclass")
+        annotation("jakarta.persistence.Embeddable")
     }
 }
 
