--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,13 @@ dependencyManagement {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.integration:spring-integration-core:6.4.0'
+    implementation 'org.springframework.integration:spring-integration-java-dsl:6.4.0'
+    implementation 'org.springframework.integration:spring-integration-ftp:6.4.0'
+    implementation 'commons-net:commons-net:3.11.1'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.apache.poi:poi-ooxml:5.3.0'
     implementation 'io.github.oshai:kotlin-logging:7.0.0'
