add url validation logics

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ kotlinVersion=1.9.25
 queryDslVersion=5.1.0
 springBootVersion=3.3.4
 springDependencyManagerVersion=1.1.6
+coroutinesVersion=1.9.0
+kotlinSerializationVersion=1.7.3
+springIntegrationVersion=6.4.0
