--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.integration:spring-integration-core:6.4.0'
-    implementation 'org.springframework.integration:spring-integration-ftp:6.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation "org.springframework.integration:spring-integration-core:${springIntegrationVersion}"
+    implementation "org.springframework.integration:spring-integration-ftp:${springIntegrationVersion}"
     implementation 'commons-net:commons-net:3.11.1'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.apache.poi:poi-ooxml:5.3.0'
@@ -43,19 +44,21 @@ dependencies {
     implementation 'com.microsoft.playwright:playwright:1.47.0'
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
     implementation 'org.eclipse.jgit:org.eclipse.jgit:7.0.0.202409031743-r'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.7.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-core:${kotlinSerializationVersion}"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:${kotlinSerializationVersion}"
     implementation 'de.brudaswen.kotlinx.serialization:kotlinx-serialization-csv:2.0.0'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.2'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutinesVersion}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-reactor:${coroutinesVersion}"
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'io.mockk:mockk:1.13.13'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
     testImplementation 'org.springframework.batch:spring-batch-test'
+    testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testRuntimeOnly 'com.h2database:h2'
 
