--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ springDependencyManagerVersion=1.1.6
 coroutinesVersion=1.9.0
 kotlinSerializationVersion=1.7.3
 springIntegrationVersion=6.4.0
+slackVersion=1.44.2
