--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server.port: 8088
+
 spring:
   application.name: link.tree
   datasource:
@@ -12,6 +14,8 @@ spring:
     job:
       name: linkGenerationJob
       enabled: false
+  main:
+    web-application-type: none
 
 feign:
   client:
