--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,6 +11,8 @@ spring:
   batch:
     jdbc.initialize-schema: always
     job.enabled: false
+  main:
+    web-application-type: none
 
 ftp:
   host: localhost
