--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.retry:spring-retry'
     implementation "org.springframework.integration:spring-integration-core:${springIntegrationVersion}"
     implementation "org.springframework.integration:spring-integration-ftp:${springIntegrationVersion}"
     implementation 'commons-net:commons-net:3.11.1'
