--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   batch:
     jdbc.initialize-schema: embedded
     job:
-      name: crawlJob
+      name: postDeployJob
       enabled: false
   main:
     web-application-type: none
