add llm service

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-reactor:${coroutinesVersion}"
     implementation "com.slack.api:slack-api-client:${slackVersion}"
     implementation "com.slack.api:slack-api-model:${slackVersion}"
+    implementation "com.cohere:cohere-java:${cohereVersion}"
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'io.mockk:mockk:1.13.13'
